--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@
 
 title: jyxjyx1234的博客
 email: jyxjyx1234@outlook.com
+header-img: img/sys/header.png
 description: >- # this means to ignore newlines until "baseurl:"
   机翻补丁合集/补丁制作心得/游戏杂谈
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -28,7 +29,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+theme: jekyll-theme-basically-basic
 plugins:
   - jekyll-feed
 
