--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: jekyll-theme-basically-basic
+theme: minima
 plugins:
   - jekyll-feed
 
