--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
 
+# Google Analytics
+google_analytics: G-W18NZ79HZN
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
